--- a/index.html
+++ b/index.html
@@ -1,8 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>My Lightweight Web Page</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="This is a lightweight web page with a clear description.">
+        <title>My Lightweight Web Page</title>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                font-size: 16px;
+                line-height: 1.5;
+                margin: 0;
+                padding: 0;
+            }
+            h1 {
+                font-size: 24px;
+            }
+            p {
+                font-size: 18px;
+            }
+            a {
+                text-decoration: none;
+                color: #0077FF;
+            }
+            a:hover {
+                text-decoration: underline;
+            }
+        </style>
+    </head>
 <body>
     <h1>Welcome to My Web Page</h1>
     <p>This is a lightweight web page.</p>
