--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="This is a lightweight web page with a clear description.">
-        <title>My Lightweight Web Page</title>
+        <meta name="description" content="Lightweight web">
+        <title>My Lightweight Web</title>
         <style>
             body {
                 font-family: Arial, sans-serif;
