--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Lightweight web">
+        <meta name="theme-color" content="#RRGGBB">
         <title>Lightweight Web</title>
         <style>
             body {
