--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Lightweight web">
         <meta name="theme-color" content="#RRGGBB">
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self';">
         <title>Lightweight Web</title>
         <style>
             body {
