--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Lightweight web">
         <meta name="theme-color" content="#RRGGBB">
+        <script>
+          function beforeUnloadListener(event) {
+  event.preventDefault();
+  return event.returnValue = 'Are you sure you want to exit?';
+};
+
+// A function that invokes a callback when the page has unsaved changes.
+onPageHasUnsavedChanges(() => {
+  window.addEventListener('beforeunload', beforeUnloadListener);
+});
+
+// A function that invokes a callback when the page's unsaved changes are resolved.
+onAllChangesSaved(() => {
+  window.removeEventListener('beforeunload', beforeUnloadListener);
+});
+        </script>
         <title>Lightweight Web</title>
         <style>
             body {
