--- a/index.html
+++ b/index.html
@@ -1,36 +1,30 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Lightweight web">
-        <meta name="theme-color" content="#RRGGBB">
-        <title>Lightweight Web</title>
-        <style>
-            body {
-                font-family: Arial, sans-serif;
-                font-size: 16px;
-                line-height: 1.5;
-                margin: 0;
-                padding: 0;
-            }
-            h1 {
-                font-size: 24px;
-            }
-            p {
-                font-size: 18px;
-            }
-            a {
-                text-decoration: none;
-                color: #0077FF;
-            }
-            a:hover {
-                text-decoration: underline;
-            }
-        </style>
-    </head>
+<head>
+    <meta name="description" content="Lightweight web">
+    <meta name="theme-color" content="#RRGGBB">
+    <title>Your Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 <body>
-    <h1>Welcome to My Web Page</h1>
-    <p>This is a lightweight web page.</p>
+    <header>
+        <h1>Your Website</h1>
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <main>
+        <h2>Welcome to Our Website</h2>
+        <p>This is a simple website.</p>
+    </main>
+    
+    <footer>
+        <p>&copy; 2023 Your Website</p>
+    </footer>
 </body>
 </html>
